--- a/jupyter_notebooks/01 - DataCollection.ipynb
+++ b/jupyter_notebooks/01 - DataCollection.ipynb
@@ -304,7 +304,7 @@
       },
       "outputs": [],
       "source": [
-        "KaggleDatasetPath = \"\"\n",
+        "KaggleDatasetPath = \"codeinstitute/malaria-cell-classification\"\n",
         "DestinationFolder = \"inputs/malaria_dataset\"   \n",
         "! kaggle datasets download -d {KaggleDatasetPath} -p {DestinationFolder}"
       ]
